# widgetQML

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/mainwindow/: CMakeLists.txt  CusConfig.cpp  CusConfig.h  MainBottomMenu.qml  MainBottomPane.qml  MainTopPane.qml  ZMenu.qml  bottomQuick.qml  contentQuick.qml  frame.cpp  frame.h  light-style.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  ncFuncMenu.qml  ncJoyMenu.qml  rightPaneMenu.qml  rightQuick.qml  rotatingsquare.qml  topQuick.qml
examples/mainwindow/global/: CusConfig.qml  ItemsOriginal.qml  qmldir
inc/: EPageIndex.h
pureQt/: CMakeLists.txt  CusConfig.cpp  CusConfig.h  MainBottomMenu.qml  MainBottomPane.qml  MainTopPane.qml  ProgPlusRightMenu.qml  ZButton.qml  ZButtonMdelInfo.cpp  ZButtonMdelInfo.h  ZColumnButton.qml  ZRectangle.cpp  ZRectangle.h  ZRowButton.qml  ZTwoDimension.cpp  ZTwoDimension.h  ZTwoDimensionImpl.h  bottomQuick.qml  codeeditor.h  contentQuick.qml  demo.qrc  frame.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  ncJoyMenu.qml  rotatingsquare.qml  zmousepresspane.cpp  zmousepresspane.h  ztopbar.cpp  ztopbar.h
qmsetup/cmake/: QMSetupAPI.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
syntax-highlighting/: CMakeLists.txt
